[package]
name = "wheat"
description = "A Chip 8 emulator"
version = "0.1.0"
authors = ["Agoston Szepessy <agoston.the.dev@gmail.com>"]
edition = "2021"

[dependencies]
derive_builder = "0.20"
measurements = "0.11"
rand = "0.8"
thiserror = "1.0"

[dependencies.sdl2]
version = "0.36"
features = ["bundled"]

[dependencies.clap]
version = "4.5"
features = ["derive"]
